Change domain name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.calvin.imgscramble"
+    package="com.ctrctr.imgscramble"
     android:versionCode="1"
     android:versionName="1.0">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -27,7 +27,7 @@
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.calvin.imgscramble.MainActivity" />
+                android:value="com.ctrctr.imgscramble.MainActivity" />
         </activity>
     </application>
 
