--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.0 rc2"
 
     defaultConfig {
-        applicationId "com.example.calvin.imgscramble"
+        applicationId "com.ctrctr.imgscramble"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
